UI 개선: 광고 위치 변경 및 Gemini 분석 결과 통합
- AdSense 컴포넌트 추가 및 적용

- TrendAnalysisModal: Gemini 분석 결과 박스 내부로 광고 이동

- 기타 UI 및 설정 업데이트

--- a/index.html
+++ b/index.html
@@ -1,50 +1,56 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Korea Trends Real-time</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              sans: ['"Noto Sans KR"', 'sans-serif'],
-            },
-            colors: {
-              primary: '#4F46E5', // Indigo 600
-              secondary: '#EC4899', // Pink 500
-              dark: '#0F172A', // Slate 900
-              surface: '#1E293B', // Slate 800
-            }
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Korea Trends Real-time</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&display=swap"
+    rel="stylesheet">
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            sans: ['"Noto Sans KR"', 'sans-serif'],
+          },
+          colors: {
+            primary: '#4F46E5', // Indigo 600
+            secondary: '#EC4899', // Pink 500
+            dark: '#0F172A', // Slate 900
+            surface: '#1E293B', // Slate 800
           }
         }
       }
-    </script>
-    <style>
-      body {
-        background-color: #0F172A;
-        color: white;
-      }
-      /* Custom scrollbar for modern feel */
-      ::-webkit-scrollbar {
-        width: 8px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #1E293B; 
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #475569; 
-        border-radius: 4px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #64748B; 
-      }
-    </style>
+    }
+  </script>
+  <style>
+    body {
+      background-color: #0F172A;
+      color: white;
+    }
+
+    /* Custom scrollbar for modern feel */
+    ::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: #1E293B;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: #475569;
+      border-radius: 4px;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background: #64748B;
+    }
+  </style>
   <script type="importmap">
 {
   "imports": {
@@ -57,9 +63,13 @@
   }
 }
 </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7332780315117329"
+    crossorigin="anonymous"></script>
 </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
-  </body>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
+</body>
+
 </html>
